src/objects/TPA_Vendor_Reg_Number_Acknowlegment__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <label>Contact First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Last_Name__c</fullName>
        <label>Contact Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Contact_First_Name__c + &apos; &apos; +  Contact_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Unique id used for migrating Account records from external systems (e.g. during acquisition loads)</inlineHelpText>
        <label>Legacy Id</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TPA_Request__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>TPA Request</label>
        <referenceTo>TPA_Request__c</referenceTo>
        <relationshipLabel>TPA Vendor Registration Number Acknowlegment List</relationshipLabel>
        <relationshipName>TPAVendorRegNumberAcknowlegments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Legal_Name_Address__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Vendor Legal Name</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>TPA Vendor Reg Number Acknowlegments</relationshipLabel>
        <relationshipName>TPAVendorRegNumberAcknowlegmentsAddress</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>TPA Vendor Reg Number Acknowlegment</label>
    <nameField>
        <displayFormat>VRNA-{000000}</displayFormat>
        <label>TPA Vendor Reg Acknowledgment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TPA Vendor Reg Number Acknowlegments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>